# pgtensor

./: .gitignore  Cargo.toml  LICENSE  README.md  pgtensor.control
.github/workflows/: tests.yml
model_generator/: README.md  main.py  pyproject.toml
models/: models.md  sigmoid.onnx
src/: dynamic_bgworker.rs  lib.rs  onnx_runtime.rs  tensor_core.rs  tensor_pg.rs
